src/sass/formio.form.scss
/* ... */
.formio-dialog.formio-dialog-theme-default .formio-dialog-button.formio-dialog-button-primary {
  background: #3288e6;
  color: #fff;
}

.formio-dialog.formio-dialog-theme-default .formio-dialog-button.formio-dialog-button-secondary {
  background: #e0e0e0;
  color: #777;
}

.formio-dialog-content .panel {
  margin: 0;
}

.formio-dialog-content [ref="dialogHeader"] {
  padding-right: 15px;
}

.formio-placeholder {
  position:absolute;
  color: #999;
}

.formio-dialog .formio-dialog-close {
  cursor: pointer;
}

.formio-iframe {
  border: none;
  width: 100%;
  height: 1000px;
}

.inline-form-button {
  margin-right: 10px;
}

.tooltip {
  opacity: 1;
}

.tooltip[x-placement="right"] .tooltip-arrow {
  border-right: 5px solid black;
}

.tooltip[x-placement="right"] .tooltip-inner {
  margin-left: 8px;
}

.control-label--bottom {
  margin-bottom: 0;
  margin-top: 5px;
}

.formio-component-label-hidden {
  position: relative;
}

.formio-hidden {
  margin: 0;
}

.formio-removed {
  display: none;
}

.control-label--hidden {
  position: absolute;
  top: 6px;
  right: 5px;
}

.formio-component-datetime .control-label--hidden.field-required {
  right: 45px;
  z-index: 3;
}

.formio-component-survey .control-label--hidden.field-required,
.formio-component-selectboxes .control-label--hidden.field-required {
  top: 0;
}

.formio-component-resource .control-label--hidden.field-required,
.formio-component-select .control-label--hidden.field-required {
  right: 40px;
  z-index: 2;
}

.formio-component-radio .control-label--hidden.field-required:after,
.formio-component-selectboxes .control-label--hidden.field-required:after {
  display: none;
}

.formio-component-radio.formio-component-label-hidden.required .form-check-label:before,
.formio-component-selectboxes.formio-component-label-hidden.required .form-check-label:before {
  position: relative;
  content: "* ";
  color:#EB0000;
}

.formio-component-radio.formio-component-label-hidden.required .label-position-right.form-check-label:before,
.formio-component-selectboxes.formio-component-label-hidden.required .label-position-right.form-check-label:before {
  right: 20px;
}

/* Fix for Hidden checkbox in component editform. */
.formio-component-hidden:not(.formio-component-checkbox),
.formio-component-datasource {
  margin-bottom: 0;
}

.checkbox-inline label,
.radio-inline label {
  font-weight: 400;
  cursor: pointer;
}

.editgrid-listgroup {
  margin-bottom: 10px;
}

.tree-listgroup {
  flex-direction: row;
}

.formio-component-submit button[disabled]+.has-error {
  display: block;
}

.formio-choices.form-group {
  margin-bottom: 0;
}

.formio-choices[data-type=select-multiple] .form-control {
  height: auto;
}

.form-control.formio-multiple-mask-select {
  width: 15%;
  z-index: 4;
}

.form-control.formio-multiple-mask-input {
  width: 85%;
}

.input-group.formio-multiple-mask-container {
  width: 100%;
}

.formio-component .table {
  margin-bottom: 0;
}

.formio-component-htmlelement {
  word-wrap: break-word;
}

.editgrid-table-container {
  margin-bottom: 10px;
  max-width: calc(100vw - 140px);

  .table-responsive {
    display: block;
    width: 100%;
    overflow-x: auto;
    -webkit-overflow-scrolling: touch;
  }
}

.editgrid-table-column {
  border: none;
}

.editgrid-table-head {
  border: 1px solid #ddd;
}

.editgrid-table-body {
  border: 1px solid #ddd;
  border-top: 0;
}

.formio-hide-label-panel-tooltip {
  margin-top: -10px;
  margin-left: -10px;
}

.is-disabled .choices__list--multiple .choices__item {
  padding: 5px 10px;
}

.is-disabled .choices__list--multiple .choices__item .choices__button {
  display: none;
}

.formio-collapse-icon {
  cursor: pointer;
  margin-right: 4px;
}

[dir="rtl"] .formio-collapse-icon {
  margin-right: unset;
  margin-left: 4px;
}

.formio-component-datetime .form-control[type="datetime-local"] ~ .input-group-addon,
.formio-component-dateTime .form-control[type="datetime-local"] ~ .input-group-addon {
  width: auto;
}

.formio-component-datagrid .formio-datagrid-remove {
  position: absolute;
  top: 0;
  right: 0;
  visibility: hidden;
  opacity: 0;
  transition: opacity 200ms linear, visibility 0ms 200ms;
}

.formio-component-datagrid {
  .datagrid-table {
    &>tbody>tr>td:last-child {
      position: relative;
    }

    &>tbody>tr:hover>td:last-child .formio-datagrid-remove {
      visibility: visible;
      opacity: 1;
      transition: visibility 0ms, opacity 200ms linear;
    }
  }

  // .edittable-group-label {
  //   background-color: #ddd;
  // }
}

.formio-component-modaledit {
  .formio-modaledit-view-container {
    position: relative;
    border: 1px solid #ddd;
    min-height: 34px;
    padding: 6px 12px;
    cursor: text;

    td & {
      padding: 0;
      border-style: none;
    }
  }

  .formio-modaledit-edit {
    position: absolute;
    top: 0;
    left: 0;
    visibility: hidden;
    opacity: 0;
    transition: opacity 200ms linear, visibility 0ms 200ms;
  }

  .formio-modaledit-view-container:hover .formio-modaledit-edit {
    visibility: visible;
    opacity: 1;
    transition: visibility 0ms, opacity 200ms linear;
  }
}

.formio-modaledit-dialog {
  .formio-modaledit-close {
    position: absolute;
    top: 100%;
    right: 0;
    border-radius: 0;
  }
}

.reset-margins {
  html, body, div, span, applet, object, iframe,
  h1, h2, h3, h4, h5, h6, p, blockquote, pre,
  a, abbr, acronym, address, big, cite, code,
  del, dfn, em, img, ins, kbd, q, s, samp,
  small, strike, strong, sub, sup, tt, var,
  b, u, i, center,
  dl, dt, dd, ol, ul, li,
  fieldset, form, label, legend,
  table, caption, tbody, tfoot, thead, tr, th, td,
  article, aside, canvas, details, embed,
  figure, figcaption, footer, header, hgroup,
  menu, nav, output, ruby, section, summary,
  time, mark, audio, video {
	  margin: 0;
  }
}

.ck-body {
  .ck.ck-balloon-panel {
    z-index: 101000;
  }
}
/* ... */

